# PositionBasedFluids

./: CMakeLists.txt  README.md  README_zh.md  imgui.ini
src/: main.cpp
src/common/: common.cpp  common.hpp  compute_shader.hpp  performance_log.cpp  performance_log.hpp  shader.hpp
src/gui/: gui.cpp  gui.hpp
src/renderer/: camera.hpp  caustics.cpp  caustics.hpp  fluid.cpp  fluid.hpp  info.cpp  info.hpp  parameter.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sceneWithCaustics.cpp  sceneWithCaustics.hpp  shader.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/renderer/shader/: particle.frag  particle.vert  particles.frag  particles.vert  renderer.frag  rendererCausticsTerminatePosition.frag  screenQuad.vert  skybox.frag  skybox.vert
src/renderer/shader/background/: background.frag
src/renderer/shader/caustics/: caustics.frag  caustics.vert  clear.comp  write2photonVBO.comp
src/renderer/shader/fluid/: cartoon.frag  edge.frag  fluid.frag  fluid.vert  fluidDepth.frag  fluidNormal.frag  fluidThickness.frag  foam.frag  particle.frag
src/renderer/shader/scene/: clear.comp  scene.frag
src/renderer/shader/sceneWithCaustics/: causticsPoint.frag  causticsPoint.vert  discardTooFewPhotons.comp  sceneWithCaustics.frag  sceneWithCaustics.vert  spatialBlur.comp
src/simulator/: compute_shader.hpp  kernel.cpp  kernel.hpp  simulator.cpp  simulator.hpp
src/simulator/shader/: adjustPositionPredict.comp  applyExternalForce.comp  applyViscosity.comp  computeDeltaPosition.comp  handleBoundaryCollision.comp  manipulateVelocity.comp  updateVelocityByPosition.comp
(+35 files in other folders)
